--- a/action.yml
+++ b/action.yml
@@ -57,7 +57,7 @@ runs:
       with:
         project_id: ${{ inputs.project_id }}
 
-    - uses: docker/setup-buildx-action@master
+    - uses: docker/setup-buildx-action@v3
 
     - name: "Configure Docker Credentials Helper"
       shell: bash
